<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:orientation="vertical" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_margin="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView0"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="20dp"
                        android:text="@string/explicacion0"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion1"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion2"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion3"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion4"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion5"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion6"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion8"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion9"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion10"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion11"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion12"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:paddingTop="50dp"
                        android:text="@string/explicacion13"
                        android:textSize="16sp" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:onClick="aceptar"
            android:text="@string/explicacion15"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>